--- a/SQLTest/SQLTest.vcxproj
+++ b/SQLTest/SQLTest.vcxproj
@@ -116,6 +116,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PPSQLServer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PPSQLServer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
